--- a/models/payment.v1.yaml
+++ b/models/payment.v1.yaml
@@ -4,66 +4,66 @@ properties:
   id:
     type: string
     description: ''
-  source_currency:
+  sourceCurrency:
     type: string
     description: 源币种
-  source_amount:
+  sourceAmount:
     type: string
     description: 源金额
-  target_currency:
+  targetCurrency:
     type: string
     description: 目标币种
-  target_amount:
+  targetAmount:
     type: string
     description: 目标金额
-  trade_date:
+  tradeDate:
     type: string
     description: 交易时间
-  goods_name:
+  goodsName:
     type: string
     description: 商品名称
-  goods_number:
+  goodsNumber:
     type: string
     description: 商品数量
-  goods_price:
+  goodsPrice:
     type: string
     description: 商品单价
   logistics:
     type: string
     description: 物流方式
-  procurement_type:
+  procurementType:
     type: string
     description: 采购类型
-  attachment_id:
+  attachmentId:
     type: string
     description: 附件id
-  create_time:
+  createTime:
     type: string
     description: 付款单创建时间
   status:
     type: string
     description: 付款单状态
-  failed_reson:
+  failedReson:
     type: string
     description: 失败原因
-  exchange_rate:
+  exchangeRate:
     type: string
     description: 汇率
-  exhcange_rate_time:
+  exhcangeRateTime:
     type: string
     description: 汇率时间
-  commission_receivable:
+  commissionReceivable:
     type: string
     description: 应收手续费
-  commission_received:
+  commissionReceived:
     type: string
     description: 实收手续费
-  paied_time:
+  paiedTime:
     type: string
     description: 付款时间
-  payee_id:
+  payeeId:
     type: string
     description: 收款人id
-  client_id:
+  extPaymentId:
     type: string
     description: 外部流水号
