--- a/models/create-payee-info-request.v1.yaml
+++ b/models/create-payee-info-request.v1.yaml
@@ -2,15 +2,17 @@ title: create-payee-info-request
 type: object
 description: 收款人信息
 properties:
-  business_type:
+  type:
     type: string
-    description: '业务类型  1:供应商付款 3:VAT缴税'
-  organization_code:
+    description: 收款人类型：公司、个人
+  certNo:
     type: string
-    description: '统一社会信用代码:账户类型为对公，且币种为人民币必填'
+    description: 证件号码
+  certType:
+    type: string
+    description: 证件类型
   name:
     type: string
-    description: 收款人名称
+    description: 姓名
 required:
-  - business_type
   - name
